# buzzwords

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: release.yml
nginx/: default.conf.template
scripts/: 0001_add_marcus.sh  0002_get_marcus.sh  0003_add_clyde.sh  0004_clyde_follow_marcus.sh  0005_get_clyde.sh  0005_get_marcus.sh  0005_get_marcus_notifications.sh  0006_make_marcus_post.sh  0008_clyde_likes_post.sh  0010_clyde_comment_on_post.sh  0011_marcus_notifications.sh  0012_like_comment.sh  0013_clyde_notifications.sh  add_user.sh
src/: ampq.rs  comment.rs  follow.rs  main.rs  mongo.rs  notification.rs  post.rs  redis.rs  user.rs
