[package]
name = "buzzwords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.22.3", features = ["tokio-comp", "json"] }
tokio = { version = "1.27.0", features = ["full"] }
lapin = { version = "2.1.1" }
axum = { version = "0.6.12", features = ["json", "macros", "tower-log"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
serde = { version = "1.0.158", features = ["derive"] }
dotenvy = "0.15.7"
anyhow = "1.0.70"
tower-http = { version = "0.4.0", features = ["full"] }
mongodb = "2.4.0"
time = { version = "0.3.20", features = ["serde"] }
serde_json = "1.0.94"
deadpool-redis = { version = "0.11.1", features = ["rt_tokio_1"] }
deadpool-lapin = { version = "0.10.0", features = ["rt_tokio_1"] }
tower = "0.4.13"
futures = "0.3.18"